# slackwatch

./: .cursorignore  .env.toml  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  LICENSE.md  README.md  book.toml  index.yaml  package-lock.json  tsconfig.json
.github/workflows/: backend.yml  dev-build.yaml  frontend.yml  helm-release.yml  mdbook.yml  old_backend.yml  release.yaml  rust-clippy.yml  rust.yml  slackwatch.yml
assets/: style.css
backend/: .dockerignore  Cargo.toml  Dioxus.toml  Dockerfile  go.mod  go.sum
backend/assets/: style.css
backend/cmd/slackwatch/: main.go
backend/internal/app/: api.go  app.go  handlers.go
backend/internal/kubernetes/: kubernetes.go
backend/internal/model/: data.go
backend/internal/notifications/: notifications.go
backend/internal/repochecker/: repochecker.go
backend/internal/service/: dataservice.go  gitops.go
backend/internal/storage/: data.go  filestorage.go
backend/pkg/config/: config.go
backend/src/: config.rs  lib.rs  main.rs  oldc.rs
backend/src/database/: client.rs  mod.rs
backend/src/gitops/: gitops.rs  mod.rs
backend/src/kubernetes/: client.rs  mod.rs
backend/src/models/: mod.rs  models.rs
backend/src/notifications/: mod.rs  ntfy.rs
backend/src/repocheck/: mod.rs
backend/src/services/: mod.rs  scheduler.rs  workloads.rs
backend/src/site/: app.rs  mod.rs  server.rs
backend/src/web/: exweb.rs  mod.rs
charts/slackwatch/: Chart.yaml  values-full.yaml  values.yaml
charts/slackwatch/templates/: deployment.yaml  ingress.yaml  rbac.yaml  role.yaml  serviceaccount.yaml
config/: config.yaml
docs/: SUMMARY.md  configuration.md  installation.md  introduction.md  workload_annotations.md
frontend/: Cargo.toml  Dockerfile  index.html  package-lock.json  package.json  server.js  svelte.config.js  tsconfig.json  vite.config.ts
frontend/public/: style.css
frontend/src/: App.svelte  App.tsx  api.ts  app.rs  config.ts  lib.rs  main.rs  main.ts  main.tsx  server.rs  types.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/: imageUpdates.ts
frontend/src/app/watched/: page.tsx
frontend/src/components/: Home.tsx  RefreshAll.tsx  RefreshButton.tsx  SettingsPage.tsx  SystemInfoCard.tsx  UpdateCard.tsx  WorkloadCard.tsx
frontend/src/config/: development.ts  index.ts  production.ts  types.ts
frontend/src/lib/: api.ts
frontend/src/routes/: +page.svelte  +page.ts  index.svelte
frontend/src/routes/running/: +page.svelte  +page.ts
frontend/src/types/: workloads.tsx
helm/: Chart.yaml  config.toml  values.yaml
helm/templates/: configmap.yaml  deployment.yaml  service.yaml
k8s/backend/: deployment.yaml
k8s/fleet/: README.md  fleet.yaml  kustomization.yaml
k8s/fleet/backend/: cluster-role.yaml  deployment.yaml  kustomization.yaml  service.yaml
k8s/fleet/backend/config/: config.toml  config.yaml
k8s/fleet/config/: config.yaml
k8s/fleet/frontend/: deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml
k8s/fleet/slackwatch/: deployment.yaml  ingress.yaml  kustomization.yaml  rbac.yaml  service-account.yaml  service.yaml
k8s/fleet/slackwatch/config/: config.toml
nextjs/: Dockerfile  package-lock.json  package.json
nextjs/src/app/: page.tsx
nextjs/src/components/: UpdateCard.tsx
old_backend/: go.sum
old_backend/cmd/slackwatch/: main.go
old_backend/internal/app/: api.go  app.go  handlers.go
old_backend/internal/kubernetes/: kubernetes.go
old_backend/internal/model/: data.go
old_backend/internal/notifications/: notifications.go
old_backend/internal/repochecker/: repochecker.go
old_backend/internal/service/: dataservice.go  gitops.go
old_backend/internal/storage/: data.go  filestorage.go
rust/: .env.dev  .env.example  Cargo.toml  Dockerfile
rust/src/: config.rs  main.rs
rust/src/database/: client.rs
rust/src/kubernetes/: client.rs  mod.rs
rust/src/models/: models.rs
rust/src/notifications/: ntfy.rs
rust/src/repocheck/: mod.rs  repocheck.rs
rust/src/services/: mod.rs  workloads.rs
rust/src/web/: exweb.rs  mod.rs
src/: api.rs  config.rs  lib.rs  main.rs
src/database/: client.rs
src/gitops/: gitops.rs  mod.rs
src/kubernetes/: mod.rs
src/models/: gitops_models.rs
src/notifications/: ntfy.rs
src/repocheck/: mod.rs  repocheck.rs
src/services/: mod.rs  scheduler.rs  workloads.rs
src/site/: app.rs  mod.rs  server.rs  site.rs
src/web/: exweb.rs
