[workspace]
members = [
    "backend",
    "frontend",
]
resolver = "2"


[workspace.dependencies]
leptos = { version = "0.6.9", default-features = false }
leptos_meta = { version = "0.6.9", default-features = false }
leptos_router = { version = "0.6.9", default-features = false }
leptos_dom = { version = "0.6.9", default-features = false }
leptos_actix = { version = "0.6.9" }

gloo-net = { version = "0.5.0", features = ["http"] }

# See https://github.com/leptos-rs/cargo-leptos for documentation of all the parameters.

# A leptos project defines which workspace members
# that are used together frontend (lib) & server (bin)
[[workspace.metadata.leptos]]
name = "slackwatch"
bin-package = "backend"
lib-package = "frontend"
assets-dir = "frontend/assets"
style-file = "frontend/css/main.scss"
site-root = "target/site/"
