[package]
name = "slackwatch"
version = "0.3.10"
edition = "2021"


[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.114"
dotenv = { version = "0.15.0"}
anyhow = { version = "1.0.92", features = ["std"] }
env_logger = { version = "0.11.5" }
tokio = { version = "1.41.0", features = ["full"] }
warp = { version = "0.3.7" }
log = { version = "0.4.22"}
k8s-openapi = { version = "0.25.0", features = ["v1_30"] }
kube = { version = "1.1.0", features = ["runtime"] }
kube-runtime = { version = "1.1.0" }
rusqlite = { version = "0.36.0", features = ["bundled"] }
strum = { version = "0.27.1" }
strum_macros = { version = "0.27.1" }
futures = { version = "0.3.31" }
reqwest = { version = "0.12.20", features = ["json"] }
oci-distribution = { version = "0.11.0" }
regex = { version = "1.11.1" }
semver = { version = "1.0.26" }
chrono = { version = "0.4.41" }
url = { version = "2.5.4" }
ntfy = { version = "0.7.0", features = ["blocking"] }
config = { version = "0.15.11" }
serde_derive = { version = "1.0.214" }
cron = { version = "0.15.0" }
git2 = { version = "0.20.2" }
serde_yaml = { version = "0.9.34" }
walkdir = { version = "2.5.0" }

[dev-dependencies]
tempfile = "3.13.0"
