[package]
name = "slackwatch"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
dotenv = { version = "0.15.0", optional = true }
anyhow = "1.0.81"
env_logger = { version = "0.11.3", optional = false}
tokio = { version = "1.36.0", features = ["full"], optional = true }
warp = { version = "0.3.0", optional = true }
log =  { version = "0.4.14", optional = false }
k8s-openapi = { version = "0.21.1", features = ["v1_24"], optional = true}
kube = { version = "0.88.1", features = ["runtime"], optional = true}
kube-runtime = { version = "0.88.1", optional = true }
rusqlite = { version = "0.31.0", features = ["bundled"], optional = true }
strum = "0.26.2"
strum_macros = "0.26.2"
futures = "0.3.30"
reqwest = { version = "0.12.0", features = ["json"], optional = true }
oci-distribution = { version = "0.10.0", optional = true }
regex = "1.10.3"
semver = "1.0.22"
chrono = "0.4.35"
url = "2.5.0"
ntfy = { version = "0.4.0", optional = true }
config = "0.14.0"
serde_derive = "1.0.197"
cron = "0.12.1"
git2 = { version = "0.18.3", optional = true }
serde_yaml = "0.9.33"
walkdir = "2.5.0"
actix-files = { version = "0.6", optional = true }
actix-web = { version = "4", optional = true, features = ["macros"] }
console_error_panic_hook = "0.1"
http = { version = "1.0.0", optional = true }
leptos = { version = "0.6"  }
leptos_meta = { version = "0.6"}
leptos_actix = { version = "0.6", optional = true }
leptos_router = { version = "0.6" }
wasm-bindgen = "=0.2.92"


[dev-dependencies]
tempfile = "3.10.1"

[features]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
    "dep:actix-files",
    "dep:actix-web",
    "dep:leptos_actix",
    "dep:rusqlite",
    "dep:tokio",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:http",
    "dep:k8s-openapi",
    "dep:kube",
    "dep:kube-runtime",
    "dep:ntfy",
    "dep:oci-distribution",
    "dep:reqwest",
    "dep:dotenv",
    "dep:git2",
    "dep:warp",
]



[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "backend"
# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"
# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"
# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/main.scss"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "assets"
# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"
# The port to use for automatic reload monitoring
reload-port = 3001
# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"
# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"
# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"

