[package]
name = "slackwatch"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
dotenv = { version = "0.15.0"}
anyhow = { version = "1.0.81", features = ["std"] }
env_logger = { version = "0.11.3" }
tokio = { version = "1.36.0", features = ["full"], optional = true }
warp = { version = "0.3.0", optional = true }
log = { version = "0.4.14"}
k8s-openapi = { version = "0.21.1", features = ["v1_24"], optional = true }
kube = { version = "0.89.0", features = ["runtime"], optional = true }
kube-runtime = {version = "0.89.0", optional = true}
rusqlite = { version = "0.31.0", features = ["bundled"], optional = true }
#actix-web = { version = "4", optional = true }
strum = { version = "0.26.2", optional = true}
strum_macros = { version = "0.26.2", optional = true}
futures = { version = "0.3.30", optional = true }
reqwest = { version = "0.12.0", features = ["json"], optional = true }
oci-distribution = { version = "0.11.0", optional =     true }
regex = { version = "1.10.3", optional = true }
semver = { version = "1.0.22", optional = true}
chrono = { version = "0.4.35", optional = true }
url =  { version = "2.5.0", optional = true }
ntfy = { version = "0.4.0", optional = true }
config = { version = "0.14.0", optional = true }
serde_derive = { version = "1.0.197", optional = true }
cron = { version = "0.12.1", optional = true }
git2 = { version = "0.18.3", optional = true }
serde_yaml = { version = "0.9.33", optional = true }
walkdir = { version = "2.4.0", optional = true }
dioxus = { version = "0.5.0-alpha.2", features = ["fullstack", "router"], optional = true }
wasm-bindgen-futures = "0.4.42"
dioxus-fullstack = "0.5.0"

[dev-dependencies]
tempfile = "3.8.1"

[features]
default = ["strum", "strum_macros", "serde_derive", "config"]
server = ["dioxus/axum", "kube/runtime", "kube", "k8s-openapi/v1_24", "reqwest", "oci-distribution", "ntfy",  "serde_yaml", "walkdir", "git2", "futures", "rusqlite", "chrono", "url", "tokio", "cron", "serde_derive",  "strum", "strum_macros", "semver", "regex", "warp"]
web = ["dioxus/web"]
