[package]
name = "slackwatch"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
dotenv = "0.15.0"
anyhow = "1.0.81"
env_logger = "0.11.3"
tokio = { version = "1.36.0", features = ["full"] }
warp = "0.3.0"
log = "0.4.14"
k8s-openapi = { version = "0.21.1", features = ["v1_24"] }
kube = { version = "0.88.1", features = ["runtime"] }
kube-runtime = "0.88.1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
actix-web = "4"
strum = "0.26.2"
strum_macros = "0.26.2"
futures = "0.3.30"
reqwest = { version = "0.12.0", features = ["json"] }
oci-distribution = "0.10.0"
regex = "1.10.3"
semver = "1.0.22"
chrono = "0.4.35"
url = "2.5.0"
ntfy = "0.4.0"
config = "0.14.0"
serde_derive = "1.0.197"

[features]
default = ["kube/runtime"]



